--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_SERVICE_STATE=off
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
