--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=tadi9048_uta_school
+DB_USERNAME=tadi9048_uta_school
+DB_PASSWORD=y#]iIzUTjBi%
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
