--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+LARAVEL_ECHO_SERVER_PORT=6001
+
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
 MAIL_PORT=1025
