--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "ioredis": "^5.3.2",
         "jquery-validation": "^1.20.0",
+        "laravel-echo": "^1.16.0",
+        "socket.io-client": "^4.7.5",
         "sweetalert2": "^11.10.5",
         "switchery": "^0.0.2"
     }
